--- a/app/src/main/res/layout/facstudattend_mark_layout.xml
+++ b/app/src/main/res/layout/facstudattend_mark_layout.xml
@@ -3,11 +3,12 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <TextView
         android:id="@+id/tv_studMark_id"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight=".5"
         android:text="Stud_id"
         android:textAlignment="center" />
 
@@ -19,8 +20,9 @@
         android:text="Studname" />
 
     <CheckBox
+
         android:id="@+id/cb_StudAttend"
-        android:layout_width="50dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight=".3" />
 </LinearLayout>
