--- a/app/src/main/res/layout/fac_announc_layout.xml
+++ b/app/src/main/res/layout/fac_announc_layout.xml
@@ -1,87 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:padding="10dp"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="3">
 
+    <Button
+        android:id="@+id/btn_FacAddAnnounc1"
 
-        <EditText
-            android:id="@+id/et_NotTitle"
-            android:layout_width="120dp"
-            android:layout_height="40dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="17dp"
-            android:layout_marginStart="17dp"
-            android:layout_marginTop="16dp"
-            android:ems="10"
-            android:hint="Title"
-            android:inputType="textPersonName" />
-
-        <Spinner
-            android:id="@+id/spinner2"
-            android:layout_width="120dp"
-            android:layout_height="40dp"
-            android:layout_alignTop="@+id/et_NotTitle"
-            android:layout_toEndOf="@+id/et_NotTitle"
-            android:layout_toRightOf="@+id/et_NotTitle" />
-
-        <TextView
-            android:id="@+id/et_datepicker1"
-            android:layout_width="110dp"
-            android:layout_height="40dp"
-            android:layout_alignTop="@+id/spinner2"
-            android:layout_toEndOf="@+id/spinner2"
-            android:layout_toRightOf="@+id/spinner2"
-            android:text="DateClick"
-            android:textAlignment="center"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/et_notDesc"
-            android:layout_width="240dp"
-            android:layout_height="65dp"
-            android:layout_alignLeft="@+id/et_NotTitle"
-            android:layout_alignStart="@+id/et_NotTitle"
-            android:layout_below="@+id/et_NotTitle"
-            android:ems="10"
-            android:hint="Description"
-            android:inputType="textPersonName" />
-
-        <Button
-            android:id="@+id/btn_FacAddAnnounc"
-            android:layout_width="60dp"
-            android:layout_height="50dp"
-            android:layout_alignBaseline="@+id/et_notDesc"
-            android:layout_alignBottom="@+id/et_notDesc"
-            android:layout_alignEnd="@+id/et_datepicker1"
-            android:layout_alignRight="@+id/et_datepicker1"
-            android:layout_marginEnd="27dp"
-            android:layout_marginRight="27dp"
-            android:text="ADD" />
-    </RelativeLayout>
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="2dp"
-        android:background="#8d8d8d"/>
-    <LinearLayout
-        android:padding="10dp"
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="364dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginRight="27dp"
+        android:text="ADD Announcment" />
 
         <ListView
             android:id="@+id/lv_FacNotice"
             android:layout_width="match_parent"
             android:layout_height="match_parent"></ListView>
-    </LinearLayout>
+
 
 
 </LinearLayout>
