--- a/app/src/main/res/layout/fac_attend_layout.xml
+++ b/app/src/main/res/layout/fac_attend_layout.xml
@@ -12,25 +12,25 @@
         <TextView
 
             android:layout_width="150dp"
-            android:layout_height="match_parent"
+            android:layout_height="30dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_weight="1"
             android:text="Date"
-            android:textAlignment="center"
+            android:textAlignment="viewStart"
             android:textStyle="bold" />
 
         <TextView
 
             android:layout_width="150dp"
-            android:layout_height="match_parent"
+            android:layout_height="30dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:layout_weight="1"
             android:text="Attendance"
-            android:textAlignment="center"
+            android:textAlignment="viewStart"
             android:textStyle="bold" />
 
     </RelativeLayout>
