--- a/app/src/main/res/layout/fac_portionview_layout.xml
+++ b/app/src/main/res/layout/fac_portionview_layout.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView"
+        android:textColor="@color/startblue"
         android:textSize="18sp" />
 
     <TextView
@@ -18,6 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView"
+        android:textColor="@color/startblue"
         android:textSize="18sp" />
 
     <!--<Button
