--- a/app/src/main/res/layout/fac_studattend_layout.xml
+++ b/app/src/main/res/layout/fac_studattend_layout.xml
@@ -18,7 +18,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Click To select \n Date"
+                android:text="Select Date"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
