--- a/app/src/main/res/layout/facattend_layout.xml
+++ b/app/src/main/res/layout/facattend_layout.xml
@@ -11,24 +11,24 @@
         <TextView
             android:id="@+id/tv_FacDate"
             android:layout_width="150dp"
-            android:layout_height="40dp"
+            android:layout_height="30dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_weight="1"
             android:text="Date"
-            android:textAlignment="center" />
+            android:textAlignment="viewStart" />
 
         <TextView
             android:id="@+id/tv_FacAttend"
             android:layout_width="150dp"
-            android:layout_height="40dp"
+            android:layout_height="30dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:layout_weight="1"
             android:text="Attendance"
-            android:textAlignment="center" />
+            android:textAlignment="viewStart" />
 
     </RelativeLayout>
 </LinearLayout>
