--- a/app/src/main/res/layout/fac_profile1.xml
+++ b/app/src/main/res/layout/fac_profile1.xml
@@ -1,20 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinatorlayout"
+    android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/db_profile_header"
-    android:orientation="vertical"
-    android:alpha="0.5"
-    android:padding="5dp">
+    app:expandedTitleMarginStart="70dp">
 
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar_layout"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:layout_width="fill_parent"
+        android:layout_height="230dp">
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:fitsSystemWindows="true"
+            android:id="@+id/CollapsingToolbarLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <ImageView
+                android:id="@+id/profile_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:cropToPadding="true"
+                />
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar1"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:layout_collapseMode="pin"
+                android:minHeight="?attr/actionBarSize">
+                <ImageView
+                    android:id="@+id/iv_nav"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/ic_navigation" />
+            </android.support.v7.widget.Toolbar>
+
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+    </android.support.design.widget.AppBarLayout>
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        <RelativeLayout
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
+            <de.hdodenhof.circleimageview.CircleImageView
+
+                android:id="@+id/iv_FacProfile"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_gravity="center"
+                android:layout_marginLeft="11dp"
+                android:layout_marginStart="11dp"
+                android:layout_marginTop="11dp"
+                android:adjustViewBounds="false"
+                android:elevation="8dp"
+                android:src="@drawable/ic_user"
+                app:civ_border_color="@color/white"
+                app:civ_border_width="3dp" />
+
+            <TextView
+                android:id="@+id/tv_FacFullname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="51dp"
+                android:layout_marginStart="51dp"
+                android:layout_marginTop="24dp"
+                android:layout_toEndOf="@+id/iv_FacProfile"
+                android:layout_toRightOf="@+id/iv_FacProfile"
+                android:fontFamily="@font/allerta_stencil"
+                android:text="User Name"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_FacNumb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/tv_FacFullname"
+                android:layout_alignStart="@+id/tv_FacFullname"
+                android:layout_below="@+id/tv_FacFullname"
+                android:layout_marginLeft="13dp"
+                android:layout_marginStart="13dp"
+                android:layout_marginTop="12dp"
+                android:text="7208121247"
+                android:textColor="#c4c4c4"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <ListView
+                android:layout_marginTop="10dp"
+                android:id="@+id/lv_profile"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/iv_FacProfile"
+                android:padding="10dp">
+
+            </ListView>
+
+        </RelativeLayout>
+    </android.support.v4.widget.NestedScrollView>
+
+    <!--<de.hdodenhof.circleimageview.CircleImageView
+        android:layout_marginBottom="-55dp"
+        android:layout_marginTop="-100dp"
+        android:id="@+id/iv_FacProfile"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_gravity="center"
+        android:adjustViewBounds="false"
+        android:elevation="8dp"
+        android:src="@drawable/ic_user"
+        app:civ_border_color="@color/white"
+        app:civ_border_width="3dp" />-->
+        <!--<LinearLayout
+
+            android:elevation="4dp"
+            android:layout_weight="1.5"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/profile_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:cropToPadding="true" />
+        </LinearLayout>
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_marginTop="140dp"
+            android:layout_marginBottom="-55dp"
+            android:layout_marginTop="-75dp"
             android:id="@+id/iv_FacProfile"
             android:layout_width="130dp"
             android:layout_height="130dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
             android:layout_gravity="center"
             android:adjustViewBounds="false"
             android:elevation="8dp"
@@ -22,18 +158,12 @@
             app:civ_border_color="@color/white"
             app:civ_border_width="3dp" />
 
-        <android.support.v7.widget.CardView
+        <RelativeLayout
+            android:layout_weight="1"
+            android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="200dp"
-            app:cardCornerRadius="10sp"
-
-            app:cardUseCompatPadding="true">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
+            >
                 <TextView
                     android:id="@+id/tv_FacFullname"
                     android:layout_width="wrap_content"
@@ -57,231 +187,16 @@
                     android:textColor="#c4c4c4"
                     android:textSize="16sp"
                     android:textStyle="bold" />
-
-                <TableLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                <ListView
                     android:layout_below="@+id/tv_FacNumb"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="11dp">
+                    android:layout_marginTop="11dp"
+                    android:padding="10dp"
+                    android:id="@+id/lv_profile"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:padding="10dp">
+                </ListView>
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Name"
-                            android:textAlignment="gravity"
-                            android:textColor="#4a4a4a"
-                            android:textSize="15sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/tv_FacName"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="3"
-                            android:text="Akshay"
-                            android:textAlignment="gravity"
-                            android:textColor="#4a4a4a"
-                            android:textSize="15sp" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:padding="10dp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Father"
-                            android:textAlignment="gravity"
-                            android:textColor="#4a4a4a"
-                            android:textSize="15sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/tv_FacFather"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="3"
-                            android:text="Yogesh"
-                            android:textAlignment="gravity"
-                            android:textColor="#4a4a4a"
-                            android:textSize="15sp" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:padding="10dp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Gender"
-                            android:textAlignment="gravity"
-                            android:textColor="#4a4a4a"
-                            android:textSize="15sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/tv_FacGender"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="3"
-                            android:text="Male"
-                            android:textAlignment="gravity"
-                            android:textColor="#4a4a4a"
-                            android:textSize="15sp" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:padding="10dp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="DOB"
-                            android:textAlignment="gravity"
-                            android:textColor="#4a4a4a"
-                            android:textSize="15sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/tv_FacDob"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="3"
-                            android:text="29/4/1995"
-                            android:textAlignment="gravity"
-                            android:textColor="#4a4a4a"
-                            android:textSize="15sp" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:padding="10dp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Qualification"
-                            android:textAlignment="gravity"
-                            android:textColor="#4a4a4a"
-                            android:textSize="15sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/tv_FacQuali"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="3"
-                            android:text="Regular"
-                            android:textAlignment="gravity"
-                            android:textColor="#4a4a4a"
-                            android:textSize="15sp" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:padding="10dp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Joining \n Date"
-                            android:textAlignment="gravity"
-                            android:textColor="#4a4a4a"
-                            android:textSize="15sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/tv_FacJoin"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="3"
-                            android:text="Xth Sum"
-                            android:textAlignment="gravity"
-                            android:textColor="#4a4a4a"
-                            android:textSize="15sp" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:padding="10dp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Salary"
-                            android:textAlignment="gravity"
-                            android:textColor="#4a4a4a"
-                            android:textSize="15sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/tv_FacSalary"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="3"
-                            android:text="1000"
-                            android:textAlignment="gravity"
-                            android:textColor="#4a4a4a"
-                            android:textSize="15sp" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:padding="10dp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="PayStatus"
-                            android:textAlignment="gravity"
-                            android:textColor="#4a4a4a"
-                            android:textSize="15sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/tv_FacPayStatus"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="3"
-                            android:text="10th"
-                            android:textAlignment="gravity"
-                            android:textColor="#4a4a4a"
-                            android:textSize="15sp" />
-                    </TableRow>
-                </TableLayout>
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-    </RelativeLayout>
+        </RelativeLayout>-->
+</android.support.design.widget.CoordinatorLayout>
 
